Add Vert.x 4 profile and correct blocking throughput findings
The original benchmark only tested HR 4.4 + Vert.x 5, but Quarkus uses
HR 3.x + Vert.x 4. Add a `quarkus` profile (HR 3.4 + Vert.x 4.5.27)
and use reflection for createEventLoopContext() to compile against both.

Blocking throughput with Agroal is ~12.3k ops/s (not ~7k with the
built-in pool), making the reactive advantage ~5-7% instead of ~2x.